[package]
name = "zookeeper"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[[example]]
name = "basic"
path = "example/basic.rs"

[dependencies]
anyhow = { version = "1.0.86" }
async-backtrace = "0.2.7"
byteorder = "1.5.0"
bytes = "1.6.0"
jute = { path = "../jute" }
rand = "0.8.5"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["macros", "net", "rt", "rt-multi-thread", "time", "sync", "io-util"] }
tokio-util = "0.7.11"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
cbindgen = "0.26.0"
