[package]
name = "fastkeeper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bytes = "1.6.0"
clap = { version = "4.5.4", features = ["derive", "env"] }
config = "0.14.0"
dashmap = "5.5.3"
okaywal = "0.3.1"
prost = "0.12.6"
raft = { version = "0.7.0", features = [
    "prost-codec",
    "default-logger",
], default-features = false }
serde = "1.0.203"
sled = "0.34.7"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-scoped = "0.2.0"
tonic = "0.11.0"
tracing = "0.1.40"
tracing-slog = "0.3.0"
tracing-subscriber = "0.3.18"
