[package]
name = "zoobench"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
bytesize = "1.3.0"
clap = { version = "4.4.6", features = ["derive", "env"] }
indicatif = "0.17.7"
log = "0.4.20"
rand = { version = "0.8.5", features = [] }
simple_logger = { version = "4.2.0", features = ["timestamps", "colors", "stderr", "threads"] }
thiserror = "1.0.50"
tokio = { version = "1.39.3", features = ["full"] }
zookeeper = "0.8.0"
