[package]
name = "zookeeper"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[[example]]
name = "basic"
path = "example/basic.rs"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["net", "rt", "rt-multi-thread", "tokio-macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
jute = { path = "../jute" }
bytes = "1.6.0"
rand = "0.8.5"

[build-dependencies]
cbindgen = "0.26.0"
