[package]
name = "zookeeper-client-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "dylib", "staticlib"]

[dependencies]
jute = { path = "../jute" }
anyhow = "1.0.86"
serde = "1.0.203"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
